src/test/deca/extension/synt/invalid/test_invalid_11.deca
//Description:erreur declarations dans les dimensions

class A{
    void afficher(){
        println("sans attributs");
    }
}
{
    A a=new A();
    a tab[][]=new a[];
    a tab2[]=new a[];
}
